--- a/css/obsolete-browser.css
+++ b/css/obsolete-browser.css
@@ -29,17 +29,14 @@ b{
     font-family: 'Anton', sans-serif;
     font-size: 4em;
     color: #333;
-    /* color: #ff765c; */
-    /* color: #ff4eb3; */
     margin-bottom: 50px; 
 
 }
 
 #obsolete-browser-content p{
     width: 80%; /*IE support*/
-    margin-bottom: 50px;
+    margin-bottom: 5%;
     font-family: 'Inconsolata', 'Courier', 'Courier New', 'Lucida Sans Typewriter', 'Lucida Console', 'Monaco', 'Andale Mono', monospace;
-    /* text-align: center; */
 }
 
 #obsolete-browser-content a{
@@ -72,10 +69,8 @@ b{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* background-color: #333; */
     width: 105px;
     height: 105px;
-    /* border: 2px solid #000; */
     border-radius: 10px;
     margin: 0px 10px 20% 10px;
     padding: 10px;
@@ -109,7 +104,21 @@ b{
     position: absolute;
     bottom: 0;
   }
+  /*----------Media Queries----------*/
 
+  @media only screen and (min-width: 2000px){
+    #obsolete-browser-content h1 {
+        font-size: calc(4em * 1.2);
+        margin-bottom: calc(50px * 1.2);
+    }
+  }
+
+@media only screen and (min-width: 3000px){
+    #obsolete-browser-content h1 {
+      font-size: calc(4em * 2.4);
+      margin-bottom: calc(50px * 2.4);
+  }
+}
   @media (max-width: 768px) {
     #browsers{
       flex-wrap: wrap;
@@ -119,6 +128,40 @@ b{
   @media (max-width: 768px) {
     #browsers div{
         margin: 0px 10px 5% 10px;
+    }
+  }
+
+   @media only screen and (min-width: 2000px){
+    #browsers div{
+        margin: 0px calc(10px * 1.2) 5% calc(10px * 1.2);
+        width: calc(105px * 1.2);
+        height: calc(105px * 1.2);
+        border-radius: calc(10px * 1.2);
+        box-shadow: calc(-3px * 1.2) calc(5px * 1.2) calc(25px * 1.2) 0px rgba(46,61,73,0.2);
+    }
+  }
+
+  @media only screen and (min-width: 3000px){
+    #browsers div{
+        margin: 0px calc(10px * 2.4) 5% calc(10px * 2.4);
+        width: calc(105px * 2.4);
+        height: calc(105px * 2.4);
+        border-radius: calc(10px * 2.4);
+        box-shadow: calc(-3px * 2.4) calc(5px * 2.4) calc(25px * 2.4) 0px rgba(46,61,73,0.2);
+    }
+  }
+
+  @media only screen and (min-width: 2000px){
+    #browsers div figure{
+        width: calc(70px * 1.2);
+        height: calc(70px * 1.2);
+    }
+  }
+
+  @media only screen and (min-width: 3000px){
+    #browsers div figure{
+        width: calc(70px * 2.4);
+        height: calc(70px * 2.4);
     }
   }
 
