--- a/css/questions-and-answers.css
+++ b/css/questions-and-answers.css
@@ -146,8 +146,7 @@ padding-bottom: 150px;
     left: 0;
     right: 0;
     z-index: 22;
-    padding: 0px;
-    padding: 10% 0px 0px 0px;
+    padding: 80px 0px 0px 0px;
     background-color: #333;
   }
   
@@ -180,6 +179,18 @@ padding-bottom: 150px;
         font-size: 2em;
         text-align: left;
         margin: 0px;
+    }
+  }
+
+  @media only screen and (min-width: 2000px){
+    .card-pic-format{
+      border: calc(3px * 1.2) solid #23C086;
+    }
+  }
+
+  @media only screen and (min-width: 3000px){
+    .card-pic-format{
+      border: calc(3px * 2.4) solid #23C086;
     }
   }
 
@@ -221,5 +232,29 @@ padding-bottom: 150px;
 @media (max-width: 768px) {
   .me-imgs-icons-bottom span{
       margin: 3%;
+  }
+}
+
+@media only screen and (min-width: 2000px){
+  .me-imgs-icons-bottom{
+      padding: calc(80px * 1.2) 0px 0px 0px;
+  }
+}
+
+@media only screen and (min-width: 3000px){
+  .me-imgs-icons-bottom{
+      padding: calc(80px * 2.4) 0px 0px 0px;
+  }
+}
+
+@media only screen and (min-width: 2000px){
+  .me-imgs-icons-bottom span{
+    margin: calc(20px * 1.2);
+  }
+}
+
+@media only screen and (min-width: 3000px){
+  .me-imgs-icons-bottom span{
+    margin: calc(20px * 2.4);
   }
 }
